# GS-OpenMP

./: .gitignore  Makefile  Makefile.am  configure.ac  exec_script.py  exec_script.sh  gs_openmp.c  gs_seq.c  ldlt.C  lu.C  matprod.C  parallel_stl.C  parallel_stl_sort.C  parallel_stl_transform.C  results.csv
Submission/: gs_openmp.c
m4/: config_summary.m4  eigen.m4  tbb.m4
